Bug 932119 - convert nsIAtom to nsString in QuotaManager and IndexedDB, r=janv